# NSUAutomaticBooking

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
src/: __init__.py  app.py  configure.py  driver.py  event.py  logger.py  loop.py  settings.py
