[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "nsubooking"
version = "1.0.0.0"
authors = [{ name = "Maxim Gerasimov", email = "infanasotku@gmail.com" }]
description = "Automatic booking of washing machines at NSU. "
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/InfaNaSotku/NSUAutomaticBooking"
Issues = "https://github.com/InfaNaSotku/NSUAutomaticBooking/issues"
